# nRF24L01_pico_c_sdk

./: CMakeLists.txt  nrf24l01.c  nrf24l01.h  nrf24l01_low_level.c
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt
examples/rx/: CMakeLists.txt  main.c
examples/tx/: CMakeLists.txt  main.c
